--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,33 @@
-cryptocompare
+Pillow==9.5.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+cryptocompare==0.7.6
+cycler==0.11.0
+datetime==5.2
+idna==3.4
+importlib-metadata==6.7.0
+kiwisolver==1.4.4
+markdown==3.4.4
 matplotlib==3.4.3
-plotly
-telebot
-tabulate
-schedule
-requests
-datetime
-pytz
-prettytable
-markdown
-qrcode
-Pillow
-pandas
+numpy==1.21.6
+packaging==23.1
+pandas==1.3.5
+plotly==5.15.0
+prettytable==3.7.0
+pyTelegramBotAPI==4.12.0
+pyparsing==3.1.0
+pypng==0.20220715.0
+python-dateutil==2.8.2
+pytz==2023.3
+qrcode==7.4.2
+requests==2.31.0
+schedule==1.2.0
+six==1.16.0
+tabulate==0.9.0
+telebot==0.0.5
+tenacity==8.2.2
+typing-extensions==4.7.1
+urllib3==2.0.4
+wcwidth==0.2.6
+zipp==3.15.0
+zope.interface==6.0
